--- a/.github/workflows/page-deploy.yml
+++ b/.github/workflows/page-deploy.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 20.5.1
 
       - name: Install dependencies
-        run: pnpm ci
+        run: npm install
 
       - name: Build
-        run: pnpm build
+        run: npm run build
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
